<resources>
    <string name="app_name">Pocket Greta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pocket Greta</string>
    <string name="nav_header_subtitle">pocketgreta@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="no_info_bonuses">No info your bonuses. Login!</string>
    <string name="action_registration">Registration</string>
    <string name="url_post">http://457f5a38fd2e.ngrok.io/rest/auth/signup</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_logout">Logout</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="QRResult">Please focus camera to QR code</string>
    <string name="logout_go">Are you sure you want to log out?</string>
    <string name="usercabbinet">My profile</string>
    <string name="your_name">Username</string>
    <string name="your_bonus">Your bonus:</string>
    <string name="pswd">Confirm password</string>
    <string name="ok">OK</string>
    <string name="EnterNumberBonuses">" Enter the number of bonuses to be debited"</string>
    <string name="Send">SEND</string>
</resources>
