<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_login"
        android:title="@string/action_login"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_registration"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_logup"
        android:title="@string/action_registration"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_logout"
        android:title="@string/action_logout"
        app:showAsAction="always" />
</menu>
